@@ -12,6 +12,7 @@ HTML/Widgets/NavMenu/Test/Stdout.pm
 HTML/Widgets/NavMenu/Test/Util.pm
 inc/Test/Run/Builder.pm
 lib/HTML/Widgets/NavMenu/EscapeHtml.pm
+lib/HTML/Widgets/NavMenu/ExpandVal.pm
 lib/HTML/Widgets/NavMenu/HeaderRole.pm
 lib/HTML/Widgets/NavMenu/Iterator/Base.pm
 lib/HTML/Widgets/NavMenu/Iterator/Html.pm
